added endpoint for update retailer table
